fix flicker

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,10 +27,6 @@ a {
   }
   color: $light-blue;
   transition: color 0.3s ease-in-out;
-
-  &:hover {
-    color: $dark-blue;
-  }
 }
 
 a:link {
@@ -41,6 +37,9 @@ a:visited {
   color: $light-blue;
 }
 
+a:hover {
+  color: $dark-blue;
+}
 
 #header {
   font-size: calc(16pt + 1.25vw);
